[gd_scene load_steps=9 format=3 uid="uid://cjy4sk0hdn3sf"]

[ext_resource type="Script" path="res://script/interfaz-main.gd" id="1_11oss"]
[ext_resource type="Texture2D" uid="uid://d2e22gmr1qldl" path="res://interfaz/img/fondo.png" id="2_0ut8i"]
[ext_resource type="Texture2D" uid="uid://d1621lgr4kkxh" path="res://interfaz/img/church.png" id="4_vje7f"]
[ext_resource type="Texture2D" uid="uid://daw7dbbbrnv7s" path="res://interfaz/img/building.png" id="5_8yryv"]
[ext_resource type="Texture2D" uid="uid://cx4qjpbo17mhe" path="res://interfaz/icons/circle-xmark-regular.svg" id="5_wphdh"]
[ext_resource type="Texture2D" uid="uid://d1n6mws4bjn6v" path="res://sprites/miniaturas/p1_distopic.png" id="6_2ipdt"]
[ext_resource type="Texture2D" uid="uid://bs6dm313yf7s8" path="res://interfaz/img/Maiz.png" id="7_dakhf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hq8cl"]
bg_color = Color(0.333333, 0.454902, 0.984314, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="menu-principal" type="Control"]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_11oss")
metadata/_edit_lock_ = true
metadata/_edit_horizontal_guides_ = [549.0]

[node name="background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1922.0
offset_bottom = 1080.0
texture = ExtResource("2_0ut8i")
metadata/_edit_lock_ = true

[node name="title" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.283
anchor_top = 0.086
anchor_right = 0.697
anchor_bottom = 0.196
offset_left = -5.35999
offset_top = -72.88
offset_right = 49.7599
offset_bottom = 8.31999
grow_horizontal = 2
theme_override_colors/default_color = Color(1, 0.835294, 0.341176, 1)
theme_override_font_sizes/normal_font_size = 150
bbcode_enabled = true
text = "Chaska Run"
scroll_active = false
context_menu_enabled = true
metadata/_edit_lock_ = true

[node name="church" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -278.0
offset_top = 328.0
offset_right = 1115.0
offset_bottom = 1112.0
texture = ExtResource("4_vje7f")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="building" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 973.0
offset_top = 516.0
offset_right = 1971.0
offset_bottom = 1077.0
texture = ExtResource("5_8yryv")
expand_mode = 1
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 240.0
offset_top = 210.0
offset_right = 1681.0
offset_bottom = 1055.0
color = Color(1, 0.835294, 0.341176, 0.894118)

[node name="CloseButton" type="TextureButton" parent="ColorRect"]
clip_contents = true
layout_direction = 2
layout_mode = 2
offset_left = 1237.0
offset_top = 4.0
offset_right = 1399.0
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("5_wphdh")

[node name="title" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -314.5
offset_top = 42.0
offset_right = 314.5
offset_bottom = 128.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 60
text = "KEY_CHOSE_PLAYER"
horizontal_alignment = 1

[node name="info-character" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.0
offset_top = -246.0
offset_right = 158.0
offset_bottom = -204.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "KEY_NAME_PLAYER_RODOLFO"

[node name="info-character2" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -158.0
offset_top = -210.0
offset_right = 158.0
offset_bottom = -168.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 28
text = "KEY_INFO_PLAYER_RODOLFO"

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.5
offset_top = -182.5
offset_right = 162.5
offset_bottom = 182.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_2ipdt")
expand_mode = 1

[node name="Button" type="Button" parent="ColorRect"]
clip_contents = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -187.5
offset_top = -133.0
offset_right = 187.5
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_hq8cl")
text = "KEY_PLAY"

[node name="memoji" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 184.0
offset_top = 667.0
offset_right = 1575.0
offset_bottom = 2058.0
scale = Vector2(0.383839, 0.295429)
texture = ExtResource("7_dakhf")
expand_mode = 1

[connection signal="pressed" from="ColorRect/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="ColorRect/Button" to="." method="_on_button_pressed"]
